--- a/popup.html
+++ b/popup.html
@@ -2,8 +2,10 @@
 <html>
     <head></head>
     <body>
-        <p>My first extension</p>
-        <button id="button">Click Me</button>
+        <h2>Social website blocker</h2>
+
+        <input id="website">
+        <button id="add-website">Block website</button>
     </body>
-    <script src="./popup.js"></script>
+    <script src = './popup.js'></script>
 </html>
